# Hokusai

./: .gitignore  pyproject.toml
hokusai/data/: toy_datasets.py
hokusai/models/: toy_model.py
tests/: test_toy_datasets.py  test_toy_model.py
