[project]
name = "hokusai"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.7",
    "jax>=0.10.2",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "optax>=0.2.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hokusai"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
